--- a/backend/pom.xml
+++ b/backend/pom.xml
@@ -19,9 +19,12 @@
     <description>ERP Invoicing System with DDD/CQRS/VSA</description>
 
     <properties>
-        <java.version>17</java.version>
+        <java.version>21</java.version>
         <jwt.version>0.12.3</jwt.version>
         <springdoc.version>2.3.0</springdoc.version>
+        <lombok.version>1.18.36</lombok.version>
+        <maven.compiler.source>21</maven.compiler.source>
+        <maven.compiler.target>21</maven.compiler.target>
     </properties>
 
     <dependencies>
@@ -139,6 +142,24 @@
                             <artifactId>lombok</artifactId>
                         </exclude>
                     </excludes>
+                </configuration>
+            </plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-compiler-plugin</artifactId>
+                <version>3.11.0</version>
+                <configuration>
+                    <release>21</release>
+                    <compilerArgs>
+                        <arg>-parameters</arg>
+                    </compilerArgs>
+                    <annotationProcessorPaths>
+                        <path>
+                            <groupId>org.projectlombok</groupId>
+                            <artifactId>lombok</artifactId>
+                            <version>${lombok.version}</version>
+                        </path>
+                    </annotationProcessorPaths>
                 </configuration>
             </plugin>
         </plugins>
