Invoice backend and management

--- a/backend/pom.xml
+++ b/backend/pom.xml
@@ -94,6 +94,17 @@
             <artifactId>flyway-core</artifactId>
         </dependency>
 
+        <!-- Hypersistence for JSONB support -->
+        <dependency>
+            <groupId>io.hypersistence</groupId>
+            <artifactId>hypersistence-utils-hibernate-63</artifactId>
+            <version>3.7.0</version>
+        </dependency>
+        <dependency>
+            <groupId>com.fasterxml.jackson.core</groupId>
+            <artifactId>jackson-databind</artifactId>
+        </dependency>
+
         <!-- Development tools -->
         <dependency>
             <groupId>org.springframework.boot</groupId>
