--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,16 +1,17 @@
 version: '3.8'
 
 services:
-  # Supabase PostgreSQL Database
-  postgres:
-    image: supabase/postgres:15.1.0.117
-    container_name: invoiceme-postgres
+  # PostgreSQL Database
+  database:
+    image: postgres:15-alpine
+    container_name: invoiceme-database
     ports:
-      - "54322:5432"
+      - "5432:5432"
     environment:
-      POSTGRES_USER: postgres
-      POSTGRES_PASSWORD: postgres
-      POSTGRES_DB: postgres
+      POSTGRES_DB: invoiceme
+      POSTGRES_USER: ${DATABASE_USERNAME:-postgres}
+      POSTGRES_PASSWORD: ${DATABASE_PASSWORD:-postgres}
+    command: postgres -c listen_addresses='*'
     volumes:
       - postgres_data:/var/lib/postgresql/data
     healthcheck:
@@ -18,21 +19,52 @@ services:
       interval: 10s
       timeout: 5s
       retries: 5
+    networks:
+      - invoiceme-network
 
-  # Supabase Studio (Database UI)
-  studio:
-    image: supabase/studio:latest
-    container_name: invoiceme-studio
+  # Spring Boot Backend
+  backend:
+    build:
+      context: ./backend
+      dockerfile: Dockerfile
+    container_name: invoiceme-backend
     ports:
-      - "54323:3000"
+      - "8080:8080"
     environment:
-      POSTGRES_PASSWORD: postgres
-      SUPABASE_URL: http://localhost:8000
-      SUPABASE_ANON_KEY: your-anon-key
-      STUDIO_PG_META_URL: http://postgres:5432/postgres
+      SPRING_PROFILES_ACTIVE: docker
+      DATABASE_URL: jdbc:postgresql://database:5432/invoiceme
+      DATABASE_USERNAME: ${DATABASE_USERNAME:-postgres}
+      DATABASE_PASSWORD: ${DATABASE_PASSWORD:-postgres}
+      JWT_SECRET: ${JWT_SECRET:-404E635266556A586E3272357538782F413F4428472B4B6250645367566B5970}
+      JWT_EXPIRATION: ${JWT_EXPIRATION:-3600000}
+      JWT_REFRESH_EXPIRATION: ${JWT_REFRESH_EXPIRATION:-604800000}
     depends_on:
-      postgres:
+      database:
         condition: service_healthy
+    networks:
+      - invoiceme-network
+    restart: unless-stopped
+
+  # Next.js Frontend
+  frontend:
+    build:
+      context: .
+      dockerfile: Dockerfile
+    container_name: invoiceme-frontend
+    ports:
+      - "3000:3000"
+    environment:
+      NEXT_PUBLIC_API_URL: ${NEXT_PUBLIC_API_URL:-http://localhost:8080/api}
+      NODE_ENV: production
+    depends_on:
+      - backend
+    networks:
+      - invoiceme-network
+    restart: unless-stopped
+
+networks:
+  invoiceme-network:
+    driver: bridge
 
 volumes:
   postgres_data:
